# python-test

./: .gitignore  .gitmodules  Libs_test.xmind  README.md  make_sampleText.py  test.txt  test_stringIO.py
OGDF_test/gml2pic/: EndpointShape.cpp  EndpointShape.h  GMLProcessor.cpp  GMLProcessor.h  GraphProcessor.cpp  GraphProcessor.h  Makefile  NodeShape.h  OGMLGraph.cpp  OGMLGraph.h  OGMLProcessor.cpp  OGMLProcessor.h  Readme.txt  drawing-GML.cpp  drawing-OGML.cpp  gml2pic.config  gml2pic.config.default  gml2pic.h  gml2pic.icns  gml2pic.pro  gml2pic.rc  main.cpp  shapes.cpp
OGDF_test/gml2pic/examples/: Sample_1.gml  Sample_1.ogml  cluster.gml  cluster.ogml  data-flow.gml  data-flow.ogml  er-diagram.gml  er-diagram.ogml  patterns.ogml  power-supply.gml  power-supply.ogml  sales-order.gml  sales-order.ogml  shapes.ogml  sierpinski_04.gml  unix-history-time.gml  world-cup.gml  (+2 more)
QT_test/Qt4_test/qt_test0/: CMakeLists.txt  dlg_sort.hpp  main.cpp  ui_dlg_sort.h
QT_test/Qt4_test/qt_test0/qtgui/: Makefile  dlg_sort.ui  qtgui.pro  ui_dlg_sort.h
Qt4/: signal_slot_test.py
Qt4/PyQt4_test/: QScrollBar_test.py  draw_test.py  firstApp.py  label_test.py
Qt4/example1/: widget.h
boost_test/: Makefile  test
boost_test/boost_test0/: Makefile  test.cpp
caffe/caffe_codeblock/: caffe.cbp  caffe.depend
caffe/mnist_Makefile/: Makefile  mnist.cbp
caffe/mnist_codeblock/: mnist.cbp  mnist.depend  mnist.layout
caffe_mnist/: caffe_mnist.cbp  caffe_mnist.layout  main.cpp
caffe_test/caffe_clion/: CMakeLists.txt  main.cpp
caffe_test/caffe_codeblock/: caffe.layout
caffe_test/mnist_Makefile/: classification  main.cpp
caffe_test/mnist_codeblock/: main.cpp  mnist  mnist.layout  mnist_deploy.prototxt
cmake-demo/test0/: CMakeLists.txt  a.cpp  main.cpp
cmake-demo/test1/: CMakeLists.txt
cmake-demo/test1/a/: CMakeLists.txt  a.h
cmake-demo/test1/a/a0/: a0.h
cmake-demo/test1/b/b0/: CMakeLists.txt  b0.h
cmake-demo/test2/: CMakeLists.txt
glib_test/glib_test0/: CMakeLists.txt  GBoy.cpp  GBoy.h  GMan.cpp  GMan.h  main.cpp
glib_test/glib_test1/: CMakeLists.txt  main.cpp
gstreamer_test/CQplayer/: CQmedia.cpp  CQmedia.h  CQplayerGUI.h  Makefile  moc_CQplayerGUI.cpp  qrc_resource.cpp
gstreamer_test/atest/: atest.layout  mp3_player.c
gstreamer_test/gst_test_clion/: CMakeLists.txt
gstreamer_test/gst_video_player_cb/: Makefile  gst_player.cpp  gst_player.h
gstreamer_test/gst_video_player_cl/: CMakeLists.txt  gst_player.cpp  gst_player.h  main.cpp  mydialog.cpp  mydialog.h  video_container.c
hdf5_test/exsample/: RELEASE.txt
hdf5_test/h5_test0/: Makefile  h5_test.h  hdf5_test0.cpp
hdf5_test/pyh5_test/: read_h5.py
keras_test/regression/: ann_test.py  cnn_mnist.py  regression_test.py
linux_c++_test/dbm_test/: CMakeLists.txt  main.cpp
linux_c++_test/gst_test/gst-template/gst-plugin/src/: Makefile  Makefile.am  gstmyfilesink.c  gstmyfilesink.h  gstmyfilesrc.c  gstmyfilesrc.h  install.sh  uninstall.sh
linux_c++_test/gst_test/gst-template/gst-plugin/src/camerasrc/: Makefile  compute.cpp  compute.h  gstcamerasrc.c
linux_c++_test/gst_test/gst-template/gst-plugin/src/myfilter/: Makefile  gstmyfilter.c  gstmyfilter.h
linux_c++_test/gst_test/gst_plugin_template/camerasrc/: CMakeLists.txt  CameraReader.cpp  CameraReader.h  gstcamerasrc.c  gstcamerasrc.h
linux_c++_test/gst_test/gst_plugin_template/myfilter/: CMakeLists.txt
linux_c++_test/gst_test/gst_plugin_template/oogst/: CMakeLists.txt  OOGMutex.cpp  OOGMutex.h
linux_c++_test/gst_test/gst_plugin_template/test/: CMakeLists.txt  main.cpp  plugin_test.cpp  plugin_test.h
linux_c++_test/gst_test/gst_test2/: CMakeLists.txt  gtk_player.cpp  gtk_player.h  main.cpp  mp3_player.h
linux_c++_test/gst_test/gst_video_player_cl_.backup/: CMakeLists.txt  gst_player.cpp  gst_player.h  main.cpp  mydialog.cpp  ui_mydialog.h  video_container.h
linux_c++_test/linux_c_test/: Makefile  Makefile.config  atest.cbp  atest.depend  atest.layout  dir_searcher.c  dir_searcher.h  main.c
linux_c++_test/pthread_test/ptread_test/: CMakeLists.txt  main.cpp
linux_c++_test/shell_test/: Makefile  test.sh
linux_c++_test/test_c++/: main.cpp  test_c++.cbp  test_c++.depend  test_c++.layout
linux_c++_test/usb_camera_test/: CMakeLists.txt  cv_camera_test  main.cpp
matlab_test/c++_mat/: CMakeLists.txt  main.cpp
mysql_test/: CMakeLists.txt  main.cpp
opencv_test/: ColorBalance.cpp  GammaCorrection.cpp  Makefile  main
opencv_test/cv_camera_test/: read_camera.py
opencv_test/cv_cb_mat_numpy/: CallPython.cpp  CallPython.h  PythonToCV.cpp  PythonToCV.h  caffe.cbp  caffe.cscope_file_list  caffe.depend  caffe.layout  cvtest.py  main.cpp
opencv_test/cv_codeblock/: caffe.depend  caffe.layout  main.cpp
opencv_test/cv_test0/: GammaCorrection  Makefile
opencv_test/mat_numpy/: PythonToCV.cpp  PythonToCV.h  PythonToCV.h.backup 
protobuff/: test.pb.cc  test.pb.h
protobuff_test/proto_test0/: Makefile  test.proto
python-test/: README.md
python-test/PyQt4_test/: drage_test.py  self-deineWidget.py
python-test/build-in_test/: mypyt.py  pxssh_test.py  pyt_test.py  test.txt
python-test/matplotlib_test/: xcorr_demo.py
python-test/numpy_test/: CP_mat.py  ndarray.py  npy2mat.py
python-test/pysnole/: README.rst  test.py
python-test/scikit_test/: LinearRegression.m  Regression_personTall.py  mode_test.py  plot_lasso_and_elasticnet.py  plot_tomography_l1_reconstruction.py
python-test/theano_test/: theano_logicRegression.py  theano_random_test.py  theano_test.py
python-test/version_test/: version_test.py  version_test.py~
python-test/wxPython_test/: drawWin_test.py
python_c_test/c_call_python/: Makefile  callpy.cpp  test.py  test0.py
python_c_test/python_call_c/: python_call_c.py
python_c_test/test_c/: CMakeLists.txt  Extest2.c  setup.py  test_c.c
scikit_test/: plot_tomography_l1_reconstruction.py
tensorflow/py_tensorflow_test/: in_top_k_test.py
tensorflow_test/py_tensorflow_test/: ImageNet_demo.py
wxPython_test/: drawWin_test1.py  menuBar_test.py  scrollWindow_test.py
wxWidget/wxPython_test/: scrollwin_test.py  wx_panel_test.py
(+449 files in other folders)
