CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(qt_test2)

AUX_SOURCE_DIRECTORY(. SRCS_PATH)

# 设置用于Qt链接的变量
FIND_PACKAGE(Qt4 REQUIRED)
SET(HEADS_PATH widget.h)
QT4_WRAP_CPP(qt_test2_HEADERS_MOC ${HEADS_PATH})
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_EXECUTABLE(qt_test2 ${SRCS_PATH} ${qt_test2_HEADERS_MOC})

# 链接Qt链接库文件
TARGET_LINK_LIBRARIES(qt_test2 ${QT_LIBRARIES})